--- a/calc.html
+++ b/calc.html
@@ -13,32 +13,32 @@
             <div class="display">0</div>
             <div class="btn-container">
                 <div class="row">
-                    <button class="zero">AC</button>
-                    <button class="delete">X</button>
-                    <button class="operator">/</button>
+                    <button class='all-clear' id='zero'>AC</button>
+                    <button class='delete'>X</button>
+                    <button class='operator'>/</button>
                 </div>
                 <div class="row">
                     <button class='number'>7</button>
                     <button class='number'>8</button>
                     <button class='number'>9</button>
-                    <button class="operator">*</button>
+                    <button class='operator'>*</button>
                 </div>
                 <div class="row">
                     <button class='number'>4</button>
                     <button class='number'>5</button>
                     <button class='number'>6</button>
-                    <button class="operator">-</button>
+                    <button class='operator'>-</button>
                 </div>
                 <div class="row">
                     <button class='number'>1</button>
                     <button class='number'>2</button>
                     <button class='number'>3</button>
-                    <button class="operator">+</button>
+                    <button class='operator'>+</button>
                 </div>
                 <div class="row">
-                    <button class='zero'>0</button>
+                    <button class='number' id='zero'>0</button>
                     <!-- <button class="decimal">.</button> -->
-                    <button class="equals">=</button>
+                    <button class='equals'>=</button>
                 </div>
     
                 
