added an decimal button

--- a/calc.html
+++ b/calc.html
@@ -10,11 +10,14 @@
 
     <body>
         <div class="calc-container">     
+            <div class="title-container">
+                <p>Calculator</p>
+            </div>
             <div class="display">0</div>
             <div class="btn-container">
                 <div class="row">
                     <button class='all-clear' id='zero'>AC</button>
-                    <button class='delete'>X</button>
+                    <!-- <button class='delete'>X</button> -->
                     <button class='operator'>/</button>
                 </div>
                 <div class="row">
@@ -37,7 +40,7 @@
                 </div>
                 <div class="row">
                     <button class='number' id='zero'>0</button>
-                    <!-- <button class="decimal">.</button> -->
+                    <button class="decimal">.</button>
                     <button class='equals'>=</button>
                 </div>
     
