--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             </div>
         
         </div> 
+
+        <div class="footer">EssenceCode © 2023 ||<a href="https://github.com/EssenceCode/calculator" target="_blank">Source Code</div>
     <script src="./calc.js"></script>     
     </body>
 
