created a delete button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div class="btn-container">
                 <div class="row">
                     <button class='all-clear' id='zero'>AC</button>
+                    <button class='delete'>X</button>
                     <button class='operator'>/</button>
                 </div>
                 <div class="row">
