--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 </div>
                 <div class="row">
                     <button class='number' id='zero'>0</button>
+                    <button class='decimal'>.</button>
                     <button class='equals'>=</button>
                 </div>
     
